--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ethereal",
+  "name": "inliner-scribonio",
   "version": "1.0.0",
-  "description": "Ethereal by HTML5 UP\r html5up.net | @ajlkn\r Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)",
+  "description": "inline assets in a html page",
   "main": "gulpfile.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -14,8 +14,8 @@
     "gulp-cssimport": "^5.0.0",
     "gulp-inline": "^0.1.3",
     "gulp-inline-assets": "^0.1.1",
-    "run-sequence": "^1.2.2"
+    "run-sequence": "^1.2.2",
+    "yargs": "^8.0.1"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
